--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>Nice try, but you can't escape that easily!</p>
             </div>
             <div class="hidden-message" id="yes-message">
-                <p>YAY! See you on the 14th, babygirl.</p>
+                <p>YAY! Happy Dance for  Kitty !!!</p>
             </div>
         </div>
     </div>
